--- a/test/api/assets/testcases_api.yaml
+++ b/test/api/assets/testcases_api.yaml
@@ -91,3 +91,16 @@ get_health:
       product_code: BTC_JPY
     res:
       status: NORMAL
+
+get_chats:
+  - req:
+      from_date: 5
+    res:
+      - nickname: User1234567
+        message: Hello world!
+        date: "2016-02-16T10:58:08.833"
+
+  - res:
+      - nickname: User1234567
+        message: Hello world!
+        date: "2016-02-16T10:58:08.833"
