Add test for get_collateral()

--- a/test/api/assets/testcases_api.yaml
+++ b/test/api/assets/testcases_api.yaml
@@ -163,3 +163,10 @@ get_balance:
       - currency_code: ETH
         amount: 20.4
         available: 16.0
+
+get_collateral:
+  - res:
+      collateral: 100000.0
+      open_position_pnl: -715.0
+      require_collateral: 19857.0
+      keep_rate: 5.00
